--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -101,12 +101,15 @@
     "\n",
     "***Docker***: Docker is similar to a virtual machine (a computer inside your computer), but is much simpler and requiring far less resources to run than a virtual machine. \n",
     "\n",
-    "***Docker image***: \n",
-    "* Docker images called **`sathayas/python-fsl-bundle`** (~3GB) is available from the Docker Hub web site. \n",
-    "* It includes Python 3 (and all necessary libraries), FSL (brain image analysis software tool), FSLEyes and MRICron (both are image viewer software tools).\n",
+    "***Docker images***: \n",
+    "* **Python-FSL bundle**:\n",
+    "  * Docker images called **`sathayas/python-fsl-bundle`** (~3GB) is available from the Docker Hub web site. \n",
+    "  * It includes Python 3 (and all necessary libraries), FSL (brain image analysis software tool), FSLEyes and MRICron (both are image viewer software tools).\n",
     "\n",
+    "* **fMRIPrep**:\n",
+    "  * Pipeline scripting tool for fMRI data preprocessing. \n",
     "\n",
-    "***Installation instructions on Docker and Docker image will be covered during the first class.***\n",
+    "***Installation instructions on Docker and Docker image (`python-fsl-bundle`) will be covered during the first class. Installation instructions on fMRIPrep will be covered later in the semester.***\n",
     "\n",
     " "
    ]
@@ -145,7 +148,7 @@
     "Course notes are in Jupyter Notebook format, and available from the instructor’s\n",
     "GitHub repository at https://github.com/sathayas/JupyterfMRIFall2019. You can clone this repository by\n",
     "```\n",
-    "git clone https://github.com/sathayas/JupyterfMRIFall2019 Notes\n",
+    "git clone https://github.com/sathayas/JupyterfMRIFall2019.git Notes\n",
     "```\n",
     "and contents of this repository is cloned on your computer under the newly created directory **`Notes`**. To download any updates to the nodes, you just run the following command in the `Notes` directory on your computer:\n",
     "```\n",
@@ -161,7 +164,7 @@
     "Some example codes used during the class, as well as some sample solutions for in-class\n",
     "exercises and homework assignments, will be available on GitHub at [URL to be added]. You can clone this repository by\n",
     "```\n",
-    "git clone [URL to be added] Codes\n",
+    "git clone https://github.com/sathayas/fMRIClassFall2019.git Codes\n",
     "```\n",
     "and contents of this repository is cloned on your computer under the newly created directory **`Codes`**. You can update this documents by running `git pull` in the `Codes` directory as explained above.\n",
     "\n",
@@ -283,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
