Started working on BET; just before creating a BET node

--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -5,16 +5,16 @@
    "metadata": {},
    "source": [
     "<p style='text-align:center'>\n",
-    "PSY 394U <b>Methods for fMRI</b>, Fall 2018\n",
+    "PSY 394U <b>Methods for fMRI</b>, Fall 2019\n",
     "\n",
     "\n",
-    "<img style='width: 300px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/Placebo_Left.png?raw=true' alt='brain blobs'/>\n",
+    "<img style='width: 300px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2019/blob/master/Images/Placebo_Left.png?raw=true' alt='brain blobs'/>\n",
     "\n",
     "</p>\n",
     "\n",
     "<p style='text-align:center; font-size:40px; margin-bottom: 30px;'><b> Normalization </b></p>\n",
     "\n",
-    "<p style='text-align:center; font-size:18px; margin-bottom: 32px;'><b> October 15 - 22, 2018</b></p>\n",
+    "<p style='text-align:center; font-size:18px; margin-bottom: 32px;'><b> September 30, 2019 </b></p>\n",
     "\n",
     "<hr style='height:5px;border:none' />"
    ]
@@ -23,67 +23,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brief introduction to Nipype\n",
+    "# Skull stripping\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
-    "## Steps in fMRI data analysis\n",
-    "\n",
-    "Although there are different software tools designed for fMRI data analysis, the steps required for such an analysis is very similar for the most part. \n",
-    "\n",
-    "<img style='width: 650px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/Nipype_NeuroImageSchematic.png?raw=true' alt='fMRI processing steps'/>\n",
-    "\n",
-    "Different software packages implements these steps to analyze fMRI data. So, in theory, it is possible to mix different steps from different software tools but you can still implement all the necessary steps.\n",
-    "\n",
-    "## Why nipype?\n",
-    "\n",
-    "Different fMRI analysis software tools have their own scripting capability. In other words, each package lets you write a script (a series of instructions) to implement the entire analysis pipeline from the beginning to the end. This is useful especially you have to run the same pre-processing and analysis steps for multiple subjects. Analyzing multiple subjects' data using a GUI will increase the risk of human error (clicking a wrong button, selecting a wrong file, entering wrong parameters, etc.). \n",
-    "\n",
-    "The syntax to script a processing pipeline is different in different packages. For a starter, in SPM you write a script in MATLAB, whereas in FSL, you need to code in a shell script. **Nipype** enables you to script different steps in different software tools in Python, so that mixing of different steps very easy.\n",
-    "\n",
-    "<img style='width: 650px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/Nipype_WorkflowEg.png?raw=true' alt='Nipype workflow example'/>\n",
-    "\n",
-    "Here is an example of how `nipype` implements different steps. The diagram such as this one represents a **workflow**, a series of tasks organized into a diagram, with output from one task fed into the following task. Here, each task is represented as a **node**. A node may take a certain input(s) and produces an output. "
+    "As you can imagine from the name, skull stripping refers to a process of removing non-brain tissues (skulls, bones, soft tissues) from structural MRI data. This step is necessary for normalization in some software packages (such as FSL). Here is an example code to perform skull stripping in FSL."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing steps as objects\n",
-    "<hr style=\"height:1px;border:none\" />\n",
-    "\n",
-    "Now let's take a look as some simple steps in the data preprocessing as examples of how Nipype works. \n",
-    "\n",
-    "## Skull stripping (FSL)\n",
-    "\n",
-    "As you can imagine from the name, skull stripping refers to a process of removing non-brain tissues (skulls, bones, soft tissues) from structural MRI data. This step is necessary for normalization in FSL (to be covered later), but not for SPM. Here is an example code to perform skull stripping in FSL."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`<SkullStrip_fsl.py>`"
+    "[`<SkullStrip.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/Norm/SkullStrip.py)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "import nibabel as nib\n",
     "import matplotlib.pyplot as plt\n",
     "import nipype.interfaces.fsl as fsl # importing FSL interface functions\n",
+    "from nilearn.plotting import plot_anat, plot_epi, view_img\n",
+    "from nipype import Node, Workflow  # components to construct workflow\n",
+    "from nipype.interfaces.io import DataSink  # datasink\n",
+    "from bids.layout import BIDSLayout  # BIDSLayout object to specify file(s)\n",
     "\n",
-    "# Directory where your data set resides. This needs to be customized\n",
-    "dataDir = '/home/satoru/Teaching/fMRI_Fall_2018/Data/ds102'\n",
-    "#dataDir = '/Users/sh45474/Documents/Teaching/fMRI_Fall_2018/Data/ds102'\n",
     "\n",
-    "# an T1 weighted image from one of the subjects\n",
-    "imageT1 = os.path.join(dataDir,'sub-26/anat/sub-26_T1w.nii.gz')"
+    "# Directory where your data set resides.\n",
+    "dataDir = '/tmp/Data/ds102'\n",
+    "\n",
+    "# Creating the layout object for this BIDS data set\n",
+    "layout = BIDSLayout(dataDir)\n",
+    "\n",
+    "# T1 image from the layout object\n",
+    "imageT1 = layout.get(subject='26',\n",
+    "                       suffix='T1w',\n",
+    "                       extension='nii.gz',\n",
+    "                       return_type='file')[0]"
    ]
   },
   {
