Skull stripping script is done

--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -26,6 +26,7 @@
     "# Skull stripping\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
+    "## Nipype script\n",
     "As you can imagine from the name, skull stripping refers to a process of removing non-brain tissues (skulls, bones, soft tissues) from structural MRI data. This step is necessary for normalization in some software packages (such as FSL). Here is an example code to perform skull stripping in FSL."
    ]
   },
@@ -38,18 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/sklearn/externals/joblib/__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
-      "  warnings.warn(msg, category=DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -79,9 +71,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I shall use the ds102 data set for this example. In particular, subject 26.\n",
+    "We shall use the ds102 data set for this example. In particular, subject 26.\n",
     "\n",
-    "Now, I create an object called **`mybet`**, a skull stripping process object with **`BET`** located under **`nipype.interfaces.fsl`**. "
+    "Here, we also specify the template image, the image defining the standard space. we use the MNI (Montreal Neurological Institute) template based on 152 subjects (a.k.a., MNI152)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# template image (from FSL)\n",
+    "fMNI = '/usr/local/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And I specify the output directory here, under the **`WorkflowOutput`** directory under the data directory."
    ]
   },
   {
@@ -90,15 +99,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating an object for BET process\n",
-    "mybet = fsl.BET()"
+    "# Output directory\n",
+    "outDir = os.path.join(dataDir, 'WorkflowOutput')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then I specify input and output file names as parameters for the BET object."
+    "Now, we can finally define a node for skull striping. we use **BET** (brain extraction tool) from  FSL."
    ]
   },
   {
@@ -107,40 +116,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output image file name\n",
-    "imageT1Out = os.path.join(dataDir,'sub-26/anat/sub-26_T1w_brain.nii.gz')\n",
-    "\n",
-    "# specifying the input and output file names in the BET object\n",
-    "mybet.inputs.in_file = imageT1\n",
-    "mybet.inputs.out_file = imageT1Out"
+    "# Skullstrip process node\n",
+    "fslBET = Node(fsl.BET(in_file=imageT1), \n",
+    "              name=\"fslBET\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the output file name has the suffix **`_brain`** attached to the input file name. At this point, you are ready to run skull stripping with the **`run()`** method associated with `mybet` object."
+    "Notice that, since we know the input T1 image, we use it as a parameter when we define the `fslBET` node. \n",
+    "\n",
+    "We are then creating a datasink node to collect the output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataSink to collect intermediate outputs\n",
+    "datasink = Node(DataSink(base_directory=outDir), \n",
+    "                name='datasink')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point we connect the `fslBET` node to the `datasink` node in a workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a workflow object\n",
+    "wf = Workflow(name=\"wf\", base_dir=outDir)\n",
+    "\n",
+    "# connecting nodes as a workflow\n",
+    "wf.connect(fslBET, \"out_file\", datasink, \"deskulled\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We assign an arbitrary output subdirectory name of **`deskulled`**. We are ready to run the workflow now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190725-19:59:55,756 nipype.workflow INFO:\n",
+      "\t Workflow wf settings: ['check', 'execution', 'logging', 'monitoring']\n",
+      "190725-19:59:55,767 nipype.workflow INFO:\n",
+      "\t Running serially.\n",
+      "190725-19:59:55,769 nipype.workflow INFO:\n",
+      "\t [Node] Setting-up \"fslNorm.fslBET\" in \"/tmp/Data/ds102/WorkflowOutput/fslNorm/fslBET\".\n",
+      "190725-19:59:55,774 nipype.workflow INFO:\n",
+      "\t [Node] Cached \"fslNorm.fslBET\" - collecting precomputed outputs\n",
+      "190725-19:59:55,775 nipype.workflow INFO:\n",
+      "\t [Node] \"fslNorm.fslBET\" found cached.\n",
+      "190725-19:59:55,777 nipype.workflow INFO:\n",
+      "\t [Node] Setting-up \"fslNorm.datasink\" in \"/tmp/Data/ds102/WorkflowOutput/fslNorm/datasink\".\n",
+      "190725-19:59:55,787 nipype.workflow INFO:\n",
+      "\t [Node] Running \"datasink\" (\"nipype.interfaces.io.DataSink\")\n",
+      "190725-19:59:55,795 nipype.workflow INFO:\n",
+      "\t [Node] Finished \"fslNorm.datasink\".\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<nipype.interfaces.base.support.InterfaceResult at 0x10a37c320>"
+       "<networkx.classes.digraph.DiGraph at 0x7f5db804f9b0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# running BET\n",
-    "mybet.run()"
+    "# running the workflow\n",
+    "wf.run()"
    ]
   },
   {
