--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -377,7 +377,7 @@
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">fMRIPrep</td>\n",
-    "        <td style=\"text-align:center;\">HW2 due</td>\n",
+    "        <td style=\"text-align:center;\">HW1 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">10/14</td> \n",
@@ -385,7 +385,7 @@
     "        <td style=\"text-align:center;\">Chapter 5.1-5.2</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">First-level analysis</td>\n",
-    "        <td style=\"text-align:center;\">HW1 due</td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">10/21</td> \n",
@@ -409,7 +409,7 @@
     "        <td style=\"text-align:center;\">Chapter 5.3</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\"> </td>\n",
+    "        <td style=\"text-align:center;\">HW2 due</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/11</td> \n",
@@ -429,10 +429,10 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">11/25</td> \n",
-    "        <td style=\"text-align:center;\">Resting-state fMRI</td>\n",
+    "        <td style=\"text-align:center;\">Cloud computing</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
-    "        <td style=\"text-align:center;\">Nilearn</td>\n",
+    "        <td style=\"text-align:center;\">Brainlife</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -445,7 +445,7 @@
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">12/9</td> \n",
-    "        <td style=\"text-align:center;\">Cloud computing</td>\n",
+    "        <td style=\"text-align:center;\">Resting-state fMRI</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">TBD</td>\n",
     "        <td style=\"text-align:center;\">Final project presentations</td>\n",
