Normalization section started; first code cell done

--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -32527,25 +32527,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Normalization with Nipype\n",
+    "# Normalization of T1 image\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
-    "## Nodes and workflows in Nipype\n",
-    "In Nipype, you can combine multiple data processing steps as a **workflow**. Each processing step in a workflow is referred as a **node**. A node in Nipype is often a *wrapper* function, a function that calls another function. Unlike a code for pre-processing steps as seen above, a node is a self-contained process, with inputs from the previous node (if any) and outputs to be used in subsequent process(es). Thus nodes can be easily combined with other nodes to form a workflow.\n",
-    "\n",
-    "Available nodes in Nipype depends on what software packages are installed on your computer. If you have SPM and FSL, then you can use preprocessing steps in either packages as a node. On the other hand, if you only have FSL installed on your computer, then Nipype cannot call an SPM node since SPM doesn't exist on your computer.\n",
-    "\n",
-    "Here, I will demonstrate normalization in FSL and SPM, both as workflows, since spatial normalization often requires some preparatory steps.\n",
-    "\n",
-    "## Normalization with FSL\n",
-    "Normalization with FSL requires 3 steps: skull-stripping, linear normalization, and non-linear normalization.\n"
+    "Normalization means warping someone's brain imaging data into the standard-shape brain (a.k.a., template). This steps is usually done by first normalizing a T1 weighted image from a subject's **native space** to the template space. The resulting warp parameters (from the native space to the template space) are then applied to the accompanying fMRI data (co-registered to the T1 image space). Here in this section, we outline how to normalize a T1-weighted image from the native space to the template space."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`<Norm_fsl.py>`"
+    "## Normalization with Nipype\n",
+    "Normalization of a T1-image requires 3 steps: skull-stripping, linear normalization, and non-linear normalization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[`<Norm_fsl.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/Norm/Norm.py)"
    ]
   },
   {
@@ -32561,24 +32561,23 @@
     "from bids.grabbids import BIDSLayout  # BIDSLayout object to specify file(s)\n",
     "\n",
     "\n",
-    "# Directory where your data set resides. This needs to be customized\n",
-    "dataDir = '/home/satoru/Teaching/fMRI_Fall_2018/Data/ds102'\n",
-    "#dataDir = '/Users/sh45474/Documents/Teaching/fMRI_Fall_2018/Data/ds102'\n",
+    "# Directory where your data set resides.\n",
+    "dataDir = '/tmp/Data/ds102'\n",
     "\n",
     "# Creating the layout object for this BIDS data set\n",
     "layout = BIDSLayout(dataDir)\n",
     "\n",
     "# an T1 weighted image from one of the subjects\n",
-    "imageT1 = layout.get(subject='26', \n",
-    "                     type='T1w', \n",
-    "                     extensions='nii.gz',\n",
+    "imageT1 = layout.get(subject='26',\n",
+    "                     suffix='T1w',\n",
+    "                     extension='nii.gz',\n",
     "                     return_type='file')[0]\n",
     "\n",
     "# template image (from FSL)\n",
     "fMNI = '/usr/local/fsl/data/standard/MNI152_T1_2mm_brain.nii.gz'\n",
     "\n",
     "# Output directory\n",
-    "outDir = os.path.join(dataDir, 'WorkflowOutput')\n"
+    "outDir = os.path.join(dataDir, 'WorkflowOutput')"
    ]
   },
   {
