Minor comment edits for normalization T1

--- a/Normalization.ipynb
+++ b/Normalization.ipynb
@@ -32545,7 +32545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[`<Norm_fsl.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/Norm/Norm.py)"
+    "[`<Norm.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/Norm/Norm.py)"
    ]
   },
   {
